fix footer styles, add spacing under inputs for current state

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -132,8 +132,8 @@
   }
 
   .typo-legal-text {
-    font-size: 1.1rem;
-    line-height: 1.6rem;
+    font-size: 1.2rem;
+    line-height: 2.5rem;
     @screen md {
       font-size: 1.4rem;
       line-height: 2rem;
